Center preview nav and add WhatsApp/Instagram share options

--- a/generator.html
+++ b/generator.html
@@ -196,6 +196,8 @@
                 <div class="export-actions">
                   <button id="copyLinkBtn" class="btn btn-secondary" type="button">Copy Page Link</button>
                   <button id="shareNativeBtn" class="btn btn-secondary" type="button">Native Share</button>
+                  <button id="shareWhatsappBtn" class="btn btn-secondary" type="button">Share on WhatsApp</button>
+                  <button id="shareInstagramBtn" class="btn btn-secondary" type="button">Share on Instagram</button>
                 </div>
               </section>
             </div>
