--- a/generator.html
+++ b/generator.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Manrope:wght@400;500;700;800&family=Space+Grotesk:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Caveat:wght@500;700&family=Manrope:wght@400;500;700;800&family=Pacifico&family=Satisfy&family=Space+Grotesk:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
@@ -88,14 +88,12 @@
                 <div id="colorTemplatesWrap" class="control-row">
                   <label>Color Templates</label>
                   <div id="colorTemplates" class="template-grid">
-                    <button class="template-btn" type="button" data-bg="#e8e0d1" data-accent="#111111"><span class="swatch" style="--bg:#e8e0d1;--accent:#111111"></span><span>Classic</span></button>
-                    <button class="template-btn" type="button" data-bg="#f8f8f8" data-accent="#111111"><span class="swatch" style="--bg:#f8f8f8;--accent:#111111"></span><span>Mono Light</span></button>
-                    <button class="template-btn" type="button" data-bg="#191919" data-accent="#f2f2f2"><span class="swatch" style="--bg:#191919;--accent:#f2f2f2"></span><span>Mono Dark</span></button>
-                    <button class="template-btn" type="button" data-bg="#f7e4d6" data-accent="#4e2f1f"><span class="swatch" style="--bg:#f7e4d6;--accent:#4e2f1f"></span><span>Warm</span></button>
-                    <button class="template-btn" type="button" data-bg="#dbe8f2" data-accent="#21364a"><span class="swatch" style="--bg:#dbe8f2;--accent:#21364a"></span><span>Sky</span></button>
-                    <button class="template-btn" type="button" data-bg="#e4efe2" data-accent="#1f3b28"><span class="swatch" style="--bg:#e4efe2;--accent:#1f3b28"></span><span>Forest</span></button>
-                    <button class="template-btn" type="button" data-bg="#efe4f7" data-accent="#3d2a56"><span class="swatch" style="--bg:#efe4f7;--accent:#3d2a56"></span><span>Lavender</span></button>
-                    <button class="template-btn" type="button" data-bg="#ffe6df" data-accent="#4f2222"><span class="swatch" style="--bg:#ffe6df;--accent:#4f2222"></span><span>Rose</span></button>
+                    <button class="template-btn" type="button" data-bg="#eadbc4" data-accent="#21160f" data-font="'Space Grotesk', sans-serif" data-grain="35"><span class="swatch" style="--bg:#eadbc4;--accent:#21160f"></span><span>Vintage</span></button>
+                    <button class="template-btn" type="button" data-bg="#fde7ef" data-accent="#5a2b42" data-font="'Caveat', cursive" data-grain="12"><span class="swatch" style="--bg:#fde7ef;--accent:#5a2b42"></span><span>Pastel Love</span></button>
+                    <button class="template-btn" type="button" data-bg="#131313" data-accent="#f3f3f3" data-font="'Manrope', sans-serif" data-grain="20"><span class="swatch" style="--bg:#131313;--accent:#f3f3f3"></span><span>Dark Aesthetic</span></button>
+                    <button class="template-btn" type="button" data-bg="#6ba8b8" data-accent="#0f2331" data-font="'Space Grotesk', sans-serif" data-grain="45"><span class="swatch" style="--bg:#6ba8b8;--accent:#0f2331"></span><span>Film Grain</span></button>
+                    <button class="template-btn" type="button" data-bg="#f4eee4" data-accent="#4b3a28" data-font="'Satisfy', cursive" data-grain="28"><span class="swatch" style="--bg:#f4eee4;--accent:#4b3a28"></span><span>Scrapbook</span></button>
+                    <button class="template-btn" type="button" data-bg="#2b2a3a" data-accent="#f6d78f" data-font="'Pacifico', cursive" data-grain="25"><span class="swatch" style="--bg:#2b2a3a;--accent:#f6d78f"></span><span>Cassette Tape</span></button>
                   </div>
                 </div>
                 <div id="customColorWrap" class="control-row split two-col custom-color-grid hidden">
@@ -137,12 +135,32 @@
                     <option value="'Gill Sans', sans-serif">Gill Sans</option>
                     <option value="'Helvetica', sans-serif">Helvetica</option>
                     <option value="'Optima', sans-serif">Optima</option>
+                    <option value="'Caveat', cursive">Caveat</option>
+                    <option value="'Pacifico', cursive">Pacifico</option>
+                    <option value="'Satisfy', cursive">Satisfy</option>
                   </select>
+                </div>
+                <div class="control-row split two-col">
+                  <div>
+                    <label for="captionText">Caption / Message</label>
+                    <input id="captionText" type="text" placeholder="A song memory, dedication, or note..." />
+                  </div>
+                  <div>
+                    <label for="locationText">Location Tag</label>
+                    <input id="locationText" type="text" placeholder="Mumbai, India" />
+                  </div>
+                </div>
+                <div class="control-row">
+                  <label for="grainIntensity">Vinyl / Grain Texture</label>
+                  <input id="grainIntensity" type="range" min="0" max="70" value="0" />
                 </div>
                 <div class="toggles">
                   <div class="toggle-item"><span>Show Spotify Code</span><input id="toggleCode" type="checkbox" checked /></div>
                   <div class="toggle-item"><span>Show Play Bar</span><input id="togglePlayer" type="checkbox" checked /></div>
                   <div class="toggle-item"><span>Show Action Buttons</span><input id="toggleActions" type="checkbox" checked /></div>
+                  <div class="toggle-item"><span>Show Caption</span><input id="toggleCaption" type="checkbox" /></div>
+                  <div class="toggle-item"><span>Show Location Tag</span><input id="toggleLocation" type="checkbox" /></div>
+                  <div class="toggle-item"><span>Show Grain Overlay</span><input id="toggleGrain" type="checkbox" /></div>
                 </div>
               </div>
             </div>
@@ -251,8 +269,11 @@
               <button id="btnLiked" class="icon-btn liked-btn" type="button" aria-label="Liked">&#10003;</button>
             </div>
             <div id="lyricsBlock" class="lyrics-block"><p id="previewLyrics">Your custom lyrics will appear here.</p></div>
+            <div id="captionBlock" class="caption-block reserved-hidden"><p id="previewCaption"></p></div>
+            <div id="locationBlock" class="location-block reserved-hidden"><p id="previewLocation"></p></div>
             <div id="spotifyCodeWrap" class="spotify-code-wrap"><img id="spotifyCode" alt="Spotify Code" /></div>
             <footer class="poster-footer"><p id="releaseDatePreview">--</p></footer>
+            <div id="grainOverlay" class="grain-overlay reserved-hidden" aria-hidden="true"></div>
           </div>
           <div class="preview-step-nav" data-step-nav="1">
             <button id="step1Next" class="btn" type="button">Next</button>
