Comment out use cases section in index.html
Comment out the use cases section in index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </section>
 
-      <section class="use-cases">
+      <!-- <section class="use-cases">
         <h2>Use Cases</h2>
         <div class="use-grid">
           <article><h3>Gifts</h3><p>Personalized song memories for birthdays and surprises.</p></article>
@@ -128,7 +128,7 @@
           <article><h3>Room Decor</h3><p>Build aesthetic walls with favorite tracks and albums.</p></article>
           <article><h3>Fan Merch</h3><p>Create collectible mini-posters for fandom drops.</p></article>
         </div>
-      </section>
+      </section> -->
 
       <footer class="bottom-cta">
         <h2>Ready to launch your poster shop?</h2>
