Make feature cards uniform in 3x2 grid layout

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <h2>Everything you need to<br /><span class="gradient-text">create stunning posters.</span></h2>
       </div>
       <div class="features-grid">
-        <article class="feature-card feature-hero-card">
+        <article class="feature-card">
           <div class="feature-icon">🎯</div>
           <h3>Precise Track Selection</h3>
           <p>Pull real-time results from Spotify. Choose the exact track or album and auto-fill release date, duration,
